# embedded-bgsub

./: CMakeLists.txt  README.md
api/: CMakeLists.txt
api/include/: BackgroundSubtractorViBe.hpp  VibeBGS.hpp  VibeBGSUtils.hpp  WeightedMovingVariance.hpp  api.hpp  pcg32.hpp  profiling.hpp  vibeUtils.hpp
api/src/: BackgroundSubtractorViBe.cpp  VibeBGS.cpp  WeightedMovingVariance.cpp  api.cpp
apps/demo/: CMakeLists.txt
apps/demo/src/: demo_main.cpp
